--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/chidorishar/goit-js-hw-08/issues"
   },
   "dependencies": {
+    "handlebars": "^4.7.7",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
   },
