--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "url": "https://github.com/chidorishar/goit-js-hw-08/issues"
   },
   "dependencies": {
-    "handlebars": "^4.7.7",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
   },
@@ -26,6 +25,7 @@
     "@parcel/transformer-sass": "^2.6.0",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
+    "parcel-transformer-hbs": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
